<resources>
    <string name="app_name">Areas y Volumenes</string>
    <string name="strRadio">Selecciona una opción:</string>
    <string name="cono">cono</string>
    <string name="cilindro">cilindro</string>
    <string name="esfera">esfera</string>
    <string name="imgAreaVolumen">imgAreaVol</string>
    <string name="btnSalir">Salir</string>
    <string name="strRadioIn">Ingresa el radio:</string>
    <string name="imagenesfera">imagenEsfera</string>
    <string name="strRadioHint">Radio</string>
    <string name="strCalcularE">Calcular</string>
    <string name="strCilindro">imagenCilindro</string>
    <string name="strCalcularC">Calcular</string>
    <string name="strAltura">Ingresa la altura:</string>
    <string name="imgEsfera">Ingresa el radio:</string>
    <string name="strEsfera">strEsfera</string>
    <string name="strCalcularCono">Calcular</string>
    <string name="strLabelResultado">Resultado:</string>
    <string name="strRegresar">Regresar</string>
    <string name="strRadioC">Radio</string>
    <string name="strDescCono">ImagenCono</string>
    <string name="strTvLRC">Ingresa el radio:</string>
    <string name="strHRC">Radio</string>
    <string name="strtvGeC">Ingresa la generatriz:</string>
    <string name="strHCG">Generatriz</string>
    <string name="strCalCono">Calcular</string>
    <string name="strRegCo">regresar</string>
    <string name="strResCTV">Resultados:</string>
    <string name="strTvAlturaCono">Ingresa la altura:</string>
    <string name="strHAC">Altura</string>
    <string name="strRadioCil">Ingres el radio:</string>
    <string name="strHRCil">Radio</string>
    <string name="strHACil">Altura</string>
    <string name="strBtnCalCil">Calcular</string>
    <string name="strBackCil">Regresar</string>
    <string name="strTvResCil">Resultados:</string>
    <string name="strBaseCil">Ingresa la base:</string>
    <string name="strRadioCuadrado">Radio al cuadrado</string>
    <string name="strRadioCili">Ingresa el radio:</string>
    <string name="strRadi">Radio</string>
</resources>