<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/txtGenC"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConoActivity">

    <ImageView
        android:id="@+id/imgCono"
        android:layout_width="364dp"
        android:layout_height="286dp"
        android:contentDescription="@string/strDescCono"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.087"
        app:srcCompat="@mipmap/cono" />

    <TextView
        android:id="@+id/tvResCono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strResCTV"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.926" />

    <Button
        android:id="@+id/btnRegresarCono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strRegCo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.705"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.824" />

    <TextView
        android:id="@+id/tvAlturaC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strTvAlturaCono"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.651" />

    <EditText
        android:id="@+id/txtGenCono"
        android:layout_width="156dp"
        android:layout_height="63dp"
        android:ems="10"
        android:hint="@string/strHCG"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.87"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.573"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strTvLRC"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.503" />

    <TextView
        android:id="@+id/tvGeneratriz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strtvGeC"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.864"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.503" />

    <EditText
        android:id="@+id/txtRadioC"
        android:layout_width="134dp"
        android:layout_height="67dp"
        android:ems="10"
        android:hint="@string/strHRC"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.57"
        tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/txtAlturaCono"
        android:layout_width="125dp"
        android:layout_height="57dp"
        android:ems="10"
        android:hint="@string/strHAC"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.727"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnCalcularCono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strCalCono"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.247"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.824" />

</androidx.constraintlayout.widget.ConstraintLayout>